feature 14: Added sorting for projects for better arrangement of items